# nicheking-watch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: manifest.json  marketplace.json
commands/: nicheking-watch.md
plugins/nicheking-watch/.claude-plugin/: plugin.json
plugins/nicheking-watch/scripts/: download.py  frames.py  nk_api.py
scripts/: library.py  save.py  transcribe.py  watch.py
tests/: test_library.py  test_watch.py
